Reformatted lots of files, added SQL memory recalling and loading for chats

--- a/chat_spare.html
+++ b/chat_spare.html
@@ -168,7 +168,7 @@
 
 <body>
   <h1>Scribe | AI for Education</h1>
-  <button id="logoutButton" onclick="window.location.href='{{ url_for('logout') }}'">Save & Logout</button>
+  <button id="logoutButton" onclick="window.location.href='{{ url_for('logout') }}'">Logout</button>
 
   <form id="promptTextAreaForm" style="position: absolute; bottom: 2vh; left: 0; width: 100%; text-align: center; display: flex; align-items: center; justify-content: center;">
     <textarea id="promptTextArea" onkeydown="checkEnter(event)" placeholder="Message Scribe..."></textarea>
