--- a/teacherlogin_spare.html
+++ b/teacherlogin_spare.html
@@ -26,26 +26,9 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-        }
-
-        button {
-            background-color: #00fcbd;
-            color: #333333;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-family: "VT323", monospace;
-            font-size: 16px;
-            box-shadow: 0 0 10px #00fcbd;
-            transition: all 0.25s;
-            width: 100%;
-            margin-bottom: 10px;
-        }
-
-        button:hover {
-            background-color: #00bb8c;
+            height: 50vh;
+            width: 50vh;
+            font-size: 40px;
         }
 
         label {
@@ -56,64 +39,51 @@
         input {
             font-family: "Kode Mono", monospace;
             width: 100%;
-            padding: 10px;
+            padding: 8px;
             margin-bottom: 16px;
             box-sizing: border-box;
             background-color: #242424;
             color: #00fcbd;
-            border-radius: 5px;
+            height: 50px;
+            font-size: 30px;
         }
 
-        input:focus {
-            outline: none;
+        button {
+            background-color: #00fcbd;
+            color: #333333;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            font-family: "VT323", monospace;
+            font-size: 50px;
+            font-weight: 1000;
+            box-shadow: 0 0 10px #00fcbd;
         }
 
-        .alert {
-            padding: 10px;
-            margin-bottom: 16px;
-            border-radius: 5px;
-        }
-
-        .alert-info {
-            background-color: #003333;
-            border: 1px solid #00fcbd;
-        }
-
-        .alert-warning {
-            background-color: #333300;
-            border: 1px solid #fcbd00;
-        }
-
-        .alert-danger {
-            background-color: #330000;
-            border: 1px solid #fcbd00;
-        }
     </style>
 </head>
 <body>
     <div class="login-container">
         <h2>Teacher Login</h2>
-
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                    <div class="alert alert-{{ category }}">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
-
-        <form action="/login-teacher" method="post">
+        <form action="#" method="post">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
 
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
 
-            <button type="submit">Login</button>
-            <button type="button" onclick="window.location.href = '/signup-teacher';">Sign Up</button>
-            <button type="button" onclick="window.location.href = '/';">Back</button>
+            <button onclick="redirectToTeacherHome()">Login</button>
+            <button onclick="redirectToHome()">Back</button>
+
+            <script>
+                function redirectToTeacherHome() {
+                    window.location.href = 'dashboard';
+                }
+                function redirectToHome() {
+                    window.location.href = '/';
+                }
+            </script>
         </form>
     </div>
 </body>
